--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@porotkin/deobf",
   "version": "0.0.1",
   "description": "Deobfuscate production stacktraces using multiple source maps from chunks",
-  "type": "module",
+  "main": "index.js",
   "license" : "MIT",
   "homepage": "https://github.com/porotkin/deobf",
   "repository": {
@@ -13,10 +13,10 @@
     "test": "node index.js dist/production/static"
   },
   "bin": {
-    "deobf": "index.js"
+    "deobf": "node index.js"
   },
   "dependencies": {
     "source-map": "^0.7.4",
-    "clipboardy": "^4.0.0"
+    "clipboardy": "^2.1.0"
   }
 }
