--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test": "node index.js dist/production/static"
   },
   "bin": {
-    "deobf": "node index.js"
+    "deobf": "index.js"
   },
   "dependencies": {
     "source-map": "^0.7.4",
     "clipboardy": "^2.1.0"
-  }
+  },
+  "files": [
+    "index.js"
+  ]
 }
