--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.3",
   "description": "Deobfuscate production stacktraces using multiple source maps from chunks",
   "main": "index.js",
-  "license" : "MIT",
+  "license": "MIT",
   "homepage": "https://github.com/porotkin/deobf",
   "repository": {
     "type": "git",
@@ -16,8 +16,8 @@
     "deobf": "index.js"
   },
   "dependencies": {
-    "source-map": "^0.7.4",
-    "clipboardy": "^2.1.0"
+    "clipboardy": "^2.1.0",
+    "source-map": "^0.7.4"
   },
   "files": [
     "index.js"
